--- a/calico/calico-vxlan.yaml
+++ b/calico/calico-vxlan.yaml
@@ -15,7 +15,15 @@ data:
   # Configure the MTU to use for workload interfaces and tunnels.
   # By default, MTU is auto-detected, and explicitly setting this field should not be required.
   # You can override auto-detection by providing a non-zero value.
-  veth_mtu: "0"
+  # - If Wireguard is enabled, set to your network MTU - 60
+  # - Otherwise, if VXLAN or BPF mode is enabled, set to your network MTU - 50
+  # - Otherwise, if IPIP is enabled, set to your network MTU - 20
+  # - Otherwise, if not using any encapsulation, set to your network MTU.
+  # veth_mtu: "" # auto-detect MTU
+  # veth_mtu: "8951" # use this if provider is AWS
+  # veth_mtu: "1400" # use this if provider is OpenStack
+  # veth_mtu: "1410" # use this if provider is GCE
+  veth_mtu: "8951"
 
   # The CNI network configuration to install on each node. The special
   # values in this config will be automatically populated.
@@ -1040,6 +1048,7 @@ spec:
                   are auto-detected.
                 type: string
               floatingIPs:
+                default: Disabled
                 description: FloatingIPs configures whether or not Felix will program
                   floating IP addresses.
                 enum:
@@ -4113,7 +4122,7 @@ rules:
     resources:
       - endpointslices
     verbs:
-      - watch 
+      - watch
       - list
   - apiGroups: [""]
     resources:
@@ -4462,8 +4471,8 @@ spec:
             # The default IPv4 pool to create on startup if none exists. Pod IPs will be
             # chosen from this range. Changing this value after installation will have
             # no effect. This should fall within `--cluster-cidr`.
-            # - name: CALICO_IPV4POOL_CIDR
-            #   value: "192.168.0.0/16"
+            - name: CALICO_IPV4POOL_CIDR
+              value: "192.168.0.0/16"
             # Disable file logging so `kubectl logs` works.
             - name: CALICO_DISABLE_FILE_LOGGING
               value: "true"
@@ -4616,6 +4625,8 @@ spec:
         # Mark the pod as a critical add-on for rescheduling.
         - key: CriticalAddonsOnly
           operator: Exists
+        - key: node-role.kubernetes.io/control-plane
+          effect: NoSchedule
         - key: node-role.kubernetes.io/master
           effect: NoSchedule
       serviceAccountName: calico-kube-controllers
@@ -4678,5 +4689,3 @@ spec:
 
 ---
 # Source: calico/templates/configure-canal.yaml
-
-
