--- a/addons/external-dns.yaml
+++ b/addons/external-dns.yaml
@@ -74,7 +74,8 @@ spec:
       serviceAccountName: external-dns
       containers:
       - name: external-dns
-        image: k8s.gcr.io/external-dns/external-dns:v0.12.2
+        # image: k8s.gcr.io/external-dns/external-dns:v0.12.2
+        image: k8s.gcr.io/external-dns/external-dns:v0.12.0
         args:
         - --source=service
         - --source=ingress
